# search_algo-ludo

./: CMakeLists.txt  README.org  intro
include/: ai.h  board.h  board_printer.h  constants.h  drawer.h  expectiminmax.h  game.h  grid.h  intro.h  pawn.h  player.h  player_colour.h  player_path.h  utils.h
src/: ai.cpp  board.cpp  drawer.cpp  expectiminmax.cpp  game.cpp  main.cpp  pawn.cpp  player.cpp  player_path.cpp
